--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^4.9.3
   cached_network_image: ^3.3.0
   image_picker: ^1.0.4
+  firebase_storage: ^11.5.6
 
 dev_dependencies:
   flutter_test:
