--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cached_network_image: ^3.3.0
   image_picker: ^1.0.4
   firebase_storage: ^11.5.6
+  emoji_picker_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
