--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.6
   emoji_picker_flutter: ^2.0.0
+  firebase_messaging: ^14.8.1
+  http: ^1.2.1
+  image_gallery_saver: ^2.0.3
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
