--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   emoji_picker_flutter: ^2.0.0
   firebase_messaging: ^14.8.1
   http: ^1.2.1
-  image_gallery_saver: ^2.0.3
+  gallery_saver_updated: ^3.0.0
   dio: ^5.4.3+1
+  image_gallery_saver: ^2.0.3
 
 dev_dependencies:
   flutter_test:
